--- a/config.org
+++ b/config.org
@@ -340,7 +340,6 @@ Functions come from Harry Schwartz.  Most workflows start with one of these.
 
   (add-hook 'eshell-mode-hook
             (lambda ()
-              (abbrev-mode 1)
               (display-line-numbers-mode 1)))
 
   (add-hook 'org-mode-hook
@@ -1402,4 +1401,11 @@ See this [[https://superuser.com/a/132409][SO]] answer.  Use [[file:org-dir-loca
 #+BEGIN_SRC emacs-lisp
   (defun js/commit-on-save ()
     (shell-command-to-string "git commit -am \"auto commit\""))
+#+END_SRC
+* abbrev
+#+BEGIN_SRC emacs-lisp
+  (use-package abbrev
+    :init
+    (setq-default abbrev-mode 1)
+    :diminish abbrev-mode)
 #+END_SRC
