Enable repeat-mode

--- a/config.org
+++ b/config.org
@@ -1434,3 +1434,9 @@ See this [[https://superuser.com/a/132409][SO]] answer.  Use [[file:org-dir-loca
     (interactive)
     (shell-command-to-string "umount_ledger.sh"))
 #+END_SRC
+* repeat mode
+Thanks to Karthinks [[https://karthinks.com/software/it-bears-repeating/][blog]].
+#+BEGIN_SRC emacs-lisp
+  (if (>= emacs-major-version 28)
+      (repeat-mode 1))
+#+END_SRC
