--- a/config.org
+++ b/config.org
@@ -1414,6 +1414,18 @@ Found a solution [[https://gist.github.com/samwhitlock/c4f0dd94a7c38c922c390c95a
   (setq tempo-interactive t)
   (global-set-key (kbd "<f6>") #'tempo-complete-tag)
 #+END_SRC
+#+BEGIN_SRC emacs-lisp
+  (tempo-define-template "jjE"
+                         '("#+BEGIN_SRC "
+                           (completing-read "Language: " '(emacs-lisp python shell))
+                           p
+                           n
+                           "#+END_SRC")
+                         "jjE"
+                         "Adds a source block in org mode.")))
+
+  (define-abbrev org-mode-abbrev-table "jjE" "" 'tempo-template-jjE :system t)
+#+END_SRC
 * ediff
 #+BEGIN_SRC emacs-lisp
   (setq ediff-split-window-function 'split-window-horizontally)
