--- a/config.org
+++ b/config.org
@@ -1422,7 +1422,7 @@ Found a solution [[https://gist.github.com/samwhitlock/c4f0dd94a7c38c922c390c95a
                            n
                            "#+END_SRC")
                          "jjE"
-                         "Adds a source block in org mode.")))
+                         "Adds a source block in org mode.")
 
   (define-abbrev org-mode-abbrev-table "jjE" "" 'tempo-template-jjE :system t)
 #+END_SRC
