--- a/config.org
+++ b/config.org
@@ -855,7 +855,8 @@ Another helpful reddit [[https://www.reddit.com/r/emacs/comments/cpdr6m/any_addi
           ("\\*deadgrep" (display-buffer-use-some-window))
           ("\\*info" (display-buffer-same-window display-buffer-use-some-window))
           ("\\*Python" (display-buffer-use-some-window))
-          ("\\*Pp Eval Output" (display-buffer-reuse-window display-buffer-use-some-window))))
+          ("\\*Pp Eval Output" (display-buffer-reuse-window display-buffer-use-some-window))
+          ("\\*Occur" (display-buffer-below-selected))))
 #+END_SRC
 
 * reformatter
