Update honor roll

--- a/config.org
+++ b/config.org
@@ -1,13 +1,15 @@
 * thank you
 
 + [[https://www.gnu.org/software/emacs/manual/][The Manual]]
-+ [[https://github.com/howardabrams/dot-files/blob/master/emacs.org][Howard Abrams]]
-+ [[https://github.com/Wilfred/.emacs.d/blob/gh-pages/init.org][Wilfred Hughes]]
 + [[https://github.com/hrs/dotfiles/blob/master/emacs/.emacs.d/configuration.org][Harry Schwartz]]
-+ [[https://github.com/zamansky/using-emacs/blob/master/myinit.org][Mike Zamansky]]
++ [[https://github.com/howardabrams/dot-files/blob/master/emacs.org][Howard Abrams]]
++ [[https://karl-voit.at/][Karl Voit]]
 + [[https://www.masteringemacs.org/][Mickey Petersen]]
-+ [[https://github.com/purcell][Steve Purcell]]
++ [[https://github.com/zamansky/using-emacs/blob/master/myinit.org][Mike Zamansky]]
++ [[https://protesilaos.com/][Protesilaos Stavrou]]
 + [[https://sachachua.com/blog/][Sacha Chua]]
++ [[https://github.com/purcell][Steve Purcell]]
++ [[https://github.com/Wilfred/.emacs.d/blob/gh-pages/init.org][Wilfred Hughes]]
 
 * external dependencies
 
