Use standard minibuffer completion

--- a/config.org
+++ b/config.org
@@ -1566,3 +1566,12 @@ Thanks to Karthinks [[https://karthinks.com/software/it-bears-repeating/][blog]]
   (setq eshell-prompt-function 'js/eshell-prompt)
 
 #+END_SRC
+* minibuffer completion
+Prompted by [[https://www.masteringemacs.org/article/understanding-minibuffer-completion][Mickey]], now enjoying the default completion system.  Somewhere IDO is being turned on.
+#+BEGIN_SRC emacs-lisp 
+  (ido-mode -1)
+  (setq completion-cycle-threshold 3)
+  (setq completions-detailed t)
+  (setq read-buffer-completion-ignore-case t)
+  (setq read-file-name-completion-ignore-case t)
+#+END_SRC
