--- a/config.org
+++ b/config.org
@@ -374,8 +374,16 @@ Functions come from Harry Schwartz.  Most workflows start with one of these.
 #+BEGIN_SRC emacs-lisp
   (recentf-mode t)
   (setq recentf-max-saved-items 150)
-  (global-set-key (kbd "C-x C-r") 'recentf-open-files)
 #+END_SRC
+
+#+BEGIN_SRC emacs-lisp
+  (defun js/find-recent-file (selection)
+      (interactive 
+       (list (completing-read "Find recent file: " recentf-list)))
+      (find-file selection))
+  (global-set-key (kbd "C-x C-r") #'js/find-recent-file)
+#+END_SRC
+
 
 * org mode housekeeping
 
